--- a/api/api-projeto-site-1sem/site/public/dashboard/iniciopóslogin.css
+++ b/api/api-projeto-site-1sem/site/public/dashboard/iniciopóslogin.css
@@ -234,6 +234,7 @@ body{
     width: 33%;
 }
 .box{
+    margin-top: 5%;
     transition: transform 0.6s ease-out;  
     transition: box-shadow 0.2s ease-in-out;
     filter: grayscale(100%);
